# tycho

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  anchor_435.json  base.Dockerfile  justfile  network.Dockerfile  rustfmt.toml  simulated.Dockerfile  tycho.Dockerfile
block-util/: Cargo.toml
block-util/benches/: big_message.rs  common.rs  decode_message.rs
block-util/fuzz/: Cargo.toml
block-util/fuzz/fuzz_targets/: ext_msg.rs  fuzz_ext_msg.rs
block-util/src/: dict.rs  lib.rs  lib.rs.bak  proto.tl  tl.rs
block-util/src/archive/: entry_id.rs  mod.rs  proto.rs  reader.rs  writer.rs
block-util/src/block/: block_id_ext.rs  block_proof_stuff.rs  block_stuff.rs  mod.rs  top_blocks.rs
block-util/src/config/: mod.rs
block-util/src/message/: ext_msg_repr.rs  mod.rs
block-util/src/queue/: mod.rs  proto.rs  queue_diff.rs  queue_state.rs
block-util/src/state/: consensus_info.rs  min_ref_mc_state.rs  mod.rs  shard_state_data.rs  shard_state_stuff.rs  state_proof.rs
cli/: Cargo.toml  build.rs
cli-models/: Cargo.toml  README.md
cli-models/src/: account.rs  blockchain.rs  config.rs  election.rs  keypair.rs  lib.rs
cli/res/: config_code.boc  elector_code.boc  elector_poa_code.boc  slasher_code.boc
cli/src/: main.rs  main.rs.bak
cli/src/debug_cmd/: mempool.rs
cli/src/init/: mod.rs
cli/src/node/: boot.rs  config.rs  control.rs  mod.rs  mod.rs.bak
cli/src/tools/: gen_account.rs  gen_dht.rs  gen_key.rs  gen_zerostate.rs  mod.rs  storage_cli.rs
cli/src/util/: alloc.rs  config.rs  elector.rs  error.rs  getter.rs  jrpc_client.rs  jrpc_client.rs.bak  logger.rs  mempool.rs  mod.rs  rpc_wu_updater.rs  rpc_wu_updater.rs.bak  wallet.rs
collator/: Cargo.toml
collator/benches/: messages_buffer.rs  queue_statistics.rs
collator/src/: lib.rs  lib.rs.bak  mempool.rs  msg_queue.rs  proto.tl  queue_adapter.rs  state_node.rs  state_node.rs.bak  test_utils.rs  test_utils.rs.bak  tracing_targets.rs  types.rs
collator/src/collator/: anchors_cache.rs  build_block.rs  collator.rs  collator_processor.rs  debug_info.rs  do_collate.rs  error.rs  execution_manager.rs  message_group.rs  message_group_new.rs  message_group_v1.rs  message_group_v2.rs  messages_buffer.rs  messages_reader.rs  mod.rs  mod.rs.bak  mq_iterator_adapter.rs  queue_adapter.rs  test_utils.rs  types.rs
collator/src/internal_queue/: error.rs  gc.rs  gc.rs.bak  iterator.rs  mod.rs  queue.rs  shard.rs  snapshot.rs  snapshot_manager.rs  types.rs
collator/src/manager/: active_collators.rs  block_operations.rs  blocks_cache.rs  blocks_cache.rs.bak  cancel_validation_runner.rs  collation_cancel.rs  collation_manager.rs  collation_processor.rs  commit.rs  mod.rs  mod.rs.bak  msgs_queue.rs  state_event_listener.rs  state_update_handler.rs  sync.rs  types.rs  utils.rs
collator/src/mempool/: builder.rs  deduplicator.rs  external_message_cache.rs  mempool_adapter.rs  mempool_adapter_ext_from_files_stub.rs  mempool_adapter_std.rs  mempool_adapter_stub.rs  mod.rs  types.rs  (+1 more)
collator/tests/: adapter_tests.rs  collation_tests.rs  collation_tests.rs.bak  dump_state_collation_tests.rs  internal_queue.rs  internal_queue.rs.bak  transactions.rs  validator_tests.rs  validator_tests.rs.bak
consensus/: Cargo.toml
consensus/examples/: consensus_node.rs  engine.rs  engine.rs.bak
consensus/src/: lib.rs  lib.rs.bak  mock_feedback.rs  models.rs  proto.tl  test_utils.rs
control/: Cargo.toml
control/src/: client.rs  collator.rs  error.rs  lib.rs  mempool.rs  models.rs  profiler.rs  profiler.rs.bak  proto.rs  server.rs  server.rs.bak
core/: Cargo.toml  build.rs
core/benches/: counter_ref_counts.csv  counters.rs
core/src/: global_config.rs  lib.rs  lib.rs.bak  proto.tl  test_utils.rs
core/tests/: archives.rs  archives.rs.bak  block_strider.rs  overlay_client.rs  overlay_rate_limits.rs  overlay_server.rs  overlay_server.rs.bak
explorer-mapper/: Cargo.toml
explorer-mapper/src/: block.rs  lib.rs  message.rs  transaction.rs
explorer-models/: Cargo.toml
explorer-models/src/: accounts.rs  block.rs  contracts.rs  lib.rs  message.rs  schema.rs  transaction.rs  types.rs  utils.rs
gen-protos/: Cargo.toml
gen-protos/src/: main.rs
light-node/: Cargo.toml  README.md
light-node/examples/: node.rs
light-node/src/: cli.rs  lib.rs
network/: Cargo.toml
network/examples/: network_node.rs  network_node.rs.bak
network/src/: config.rs  connection.rs  crypto.rs  endpoint.rs  lib.rs  node_id.rs  peer.rs  proto.rs  proto.tl
network/tests/: dht.rs  dht.rs.bak  overlay.rs  private_overlay.rs  private_overlay.rs.bak  public_overlay.rs  public_overlay.rs.bak  request_handler.rs
rc-analyze/: Cargo.toml
rc-analyze/src/: main.rs
rpc/: Cargo.toml  build.rs
rpc-subscriptions/: Cargo.toml
rpc-subscriptions/src/: api.rs  lib.rs  manager.rs  memory.rs  test_utils.rs  types.rs
rpc/src/: config.rs  lib.rs  lib.rs.bak  models.rs  node.rs  state.rs
rpc/tests/: rate_limits.rs
scripts/network-sim/: Cargo.toml
simulator/: Cargo.toml  README.md
simulator/src/: compose.rs  config.rs  main.rs  node.rs  simulator.rs
slasher/: Cargo.toml
slasher-traits/: Cargo.toml
slasher-traits/src/: lib.rs  mempool.rs  validator.rs
slasher/src/: analyzer.rs  lib.rs  proto.tl  tracing_targets.rs  util.rs
storage/: Cargo.toml
storage-traits/: Cargo.toml
storage-traits/src/: lib.rs  stored_value.rs
storage/src/: archive_config.rs  config.rs  context.rs  lib.rs  refcount.rs  tables.rs
storage/tests/: global-config.json  mod.rs
util/: Cargo.toml
util-proc/: Cargo.toml
util-proc/src/: derive_partial_config.rs  derive_transactional.rs  lib.rs
util/benches/: p2.rs
util/src/: byte_reader.rs  cli.rs  compression.rs  config.rs  drop.rs  dropper.rs  io.rs  lib.rs  lib.rs.bak  macros.rs  mem.rs  progress_bar.rs  rate_limit.rs  serde_helpers.rs  time.rs  tl.rs  transactional_types.rs
validator/: Cargo.toml
wu-tuner/: Cargo.toml
wu-tuner/src/: config.rs  lib.rs  service.rs  tuner.rs  unit_cost_clipper.rs  updater.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+1062 files in other folders)
