[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Broxus Team"]
rust-version = "1.80.0"
repository = "https://github.com/broxus/tycho"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "block-util",
    "cli",
    "collator",
    "consensus",
    "control",
    "core",
    "gen-protos",
    "network",
    "rpc",
    "simulator",
    "storage",
    "util",
]

[workspace.dependencies]
# crates.io deps
ahash = "0.8"
anyhow = "1.0.79"
arc-swap = "1.6.0"
async-trait = "0.1"
axum = "0.7"
backon = "0.4.4"
base64 = "0.22.0"
bitflags = "2.6"
blake3 = "1.5.3"
bumpalo = "3.14.0"
bytes = "1.5.0"
bytesize = { version = "1.3.0", features = ["serde"] }
castaway = "0.2"
clap = { version = "4.5.3", features = ["derive"] }
crc32c = "0.6"
dashmap = "5.5.3"
dirs = "5.0.1"
ed25519 = "2.0"
everscale-crypto = { version = "0.2", features = ["tl-proto", "serde"] }
everscale-types = { version = "0.1.0-rc.8", features = ["tycho"] }
exponential-backoff = "1"
fdlimit = "0.3.0"
futures-util = "0.3"
getip = "0.1"
hex = "0.4"
humantime = "2"
indexmap = "2.2"
itertools = "0.12"
libc = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
moka = { version = "0.12", features = ["sync"] }
parking_lot = { version = "0.12.1" }
parking_lot_core = "0.9.9"
pin-project-lite = "0.2"
pkcs8 = "0.10"
prost = "0.13"
prost-build = "0.13"
quick_cache = "0.6.0"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
] }
rand = "0.8"
rand_pcg = { version = "0.3" }
rayon = "1.10"
reqwest = { version = "0.12", default-features = false }
ring = "0.17.8"
rlimit = "0.10.1"
rustc_version = "0.4"
rustls = "0.23.16"
rustls-webpki = "0.102"
scc = "2.1"
scopeguard = "1.2"
serde = "1.0"
serde_json = "1.0.114"
serde_path_to_error = "0.1"
sha2 = "0.10.8"
smallvec = "1.13.1"
socket2 = "0.5"
sysinfo = "0.30.5"
tarpc = { version = "0.34", features = [
    "tokio1",
    "serde1",
    "serde-transport",
    "serde-transport-bincode",
    "unix",
] }
tempfile = "3.10"
thiserror = "1.0"
tikv-jemallocator = { version = "0.5", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }
tikv-jemalloc-ctl = { version = "0.5" }
tl-proto = "0.4"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-flame = "0.2"
tracing-stackdriver = "0.10.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1.2"
triomphe = "0.1.11"
weedb = "0.3.4"
zstd-safe = "7.2"
zstd-sys = "2.0"

# TODO: RIIR
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git", branch = "new_cells" }

# local deps
tycho-block-util = { path = "./block-util" }
tycho-collator = { path = "./collator" }
tycho-consensus = { path = "./consensus" }
tycho-control = { path = "./control" }
tycho-core = { path = "./core" }
tycho-network = { path = "./network" }
tycho-rpc = { path = "./rpc" }
tycho-storage = { path = "./storage" }
tycho-util = { path = "./util" }

[patch.crates-io]
everscale-types = { git = "https://www.github.com/broxus/everscale-types.git", rev = "8a7fc2210a3e295946bbf1b35ffb2267560625b3" }

[patch."https://github.com/broxus/everscale-types.git"]
everscale-types = { git = "https://www.github.com/broxus/everscale-types.git", rev = "8a7fc2210a3e295946bbf1b35ffb2267560625b3" }

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
disallowed_methods = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
print_stdout = "warn"
print_stderr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true

[profile.release_check]
inherits = "release"
debug-assertions = true
overflow-checks = true

[profile.dev.package.hex]
opt-level = 3
[profile.dev.package.base64]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.everscale-crypto]
opt-level = 3
[profile.dev.package.curve25519-dalek]
opt-level = 3
[profile.dev.package.ed25519]
opt-level = 3
[profile.dev.package.hashbrown]
opt-level = 3
[profile.dev.package."*"]
opt-level = 1
