[package]
name = "tycho-block-util"
description = "Shared utilities for blockchain models."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
anyhow = { workspace = true }
bytes = { workspace = true }
everscale-types = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

# local deps
tycho-util = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
test = []

[lints]
workspace = true
