[package]
name = "tycho-block-util"
description = "Shared utilities for blockchain models."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bench]]
name = "big_message"
harness = false

[[bench]]
name = "decode_message"
harness = false

[dependencies]
# crates.io deps
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
everscale-types = { workspace = true, features = ["blake3", "rayon"] }
hex = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }

# local deps
tycho-storage-traits = { workspace = true, optional = true }
tycho-util = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
criterion = { workspace = true }

[features]
default = ["storage"]
test = []
storage = ["dep:tycho-storage-traits"]

[lints]
workspace = true
