[package]
name = "tycho-cli-models"
description = "CLI models for Tycho node."
include = ["src/**/*.rs", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
anyhow = { workspace = true }
everscale-types = { workspace = true, features = ["abi"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }

[features]
default = []