[package]
name = "tycho-cli"
description = "Node CLI."
include = ["src/**/*.rs", "res/**/*.boc"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "tycho"
path = "./src/main.rs"

[dependencies]
# crates.io deps
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
everscale-crypto = { workspace = true }
everscale-types = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
public-ip = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_path_to_error = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
], optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-collator = { workspace = true }
tycho-core = { workspace = true }
tycho-network = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
tycho-collator = { workspace = true, features = ["test"] }

[build-dependencies]
anyhow = { workspace = true }
rustc_version = { workspace = true }

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[lints]
workspace = true
