[package]
name = "tycho-collator"
description = "A collator node."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# crates.io deps
anyhow = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
everscale-crypto = { workspace = true }
everscale-types = { workspace = true, features = ["rand", "blake3", "rayon"] }
futures-util = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
scc = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
tokio-util = { workspace = true }
ton_executor = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
trait-variant = { workspace = true }
weedb = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-consensus = { workspace = true }
tycho-network = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tycho-block-util = { workspace = true, features = ["test"] }
tycho-collator = { workspace = true, features = ["test"] }
tycho-core = { workspace = true, features = ["test"] }
tycho-storage = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test"] }

[features]
default = []
test = []
block-creator-stats = []

[lints]
workspace = true
