[package]
name = "tycho-collator"
description = "A collator node."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[test]]
name = "adapter_tests"
required-features = ["test"]

[[test]]
name = "collation_tests"
required-features = ["test"]

[dependencies]
# crates.io deps
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
blake3 = { workspace = true }
bumpalo = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
num-bigint = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
scc = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tycho-crypto = { workspace = true }
tycho-types = { workspace = true, features = ["rand9", "blake3", "rayon"] }
weedb = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-consensus = { workspace = true }
tycho-core = { workspace = true }
tycho-executor = { workspace = true }
tycho-network = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }
tycho-vm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tycho-block-util = { workspace = true, features = ["test"] }
tycho-core = { workspace = true, features = ["test"] }
tycho-network = { workspace = true, features = ["test"] }
tycho-storage = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test"] }

[features]
default = []
test = ["tycho-block-util/test", "tycho-storage/test", "tycho-core/test"]
block-creator-stats = []

[lints]
workspace = true
