[package]
name = "tycho-consensus"
description = "DAG-based consensus for external messages queue."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[example]]
name = "engine"
path = "examples/engine/main.rs"
required-features = ["test"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
everscale-crypto = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true, optional = true }
itertools = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tokio = { workspace = true, default-features = false }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true }
weedb = { workspace = true }

# local deps
tycho-network = { workspace = true }
tycho-util = { workspace = true }
tycho-storage = { workspace = true }

[dev-dependencies]
humantime = { workspace = true }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread", "macros"] }
tracing-flame = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# examples' dependencies
clap = { workspace = true, features = ["wrap_help"] }
serde_json = { workspace = true }
tracing-appender = { workspace = true }

tycho-consensus = { workspace = true, features = ["test"] }
tycho-storage = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test", "cli"] }

[lints]
workspace = true

[features]
test = ["dep:tokio-stream", "dep:hex"]
