[package]
name = "tycho-consensus"
description = "DAG-based consensus for external messages queue."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[example]]
name = "engine"
path = "examples/engine.rs"
required-features = ["test"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
bitflags = { workspace = true }
blake3 = { workspace = true }
bumpalo = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, default-features = false }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, default-features = false, features = ["time", "rt"] }
tracing = { workspace = true }
tracing-flame = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
tycho-crypto = { workspace = true }
tycho-types = { workspace = true }
weedb = { workspace = true }

# local deps
tycho-network = { workspace = true }
tycho-slasher-traits = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true, features = ["deadlock_detection"] }
tempfile = { workspace = true }
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tracing-flame = { workspace = true }
tracing-subscriber = { workspace = true }

# examples' dependencies
clap = { workspace = true, features = ["wrap_help"] }

tycho-network = { workspace = true, features = ["test"] }
tycho-storage = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test", "cli"] }

[lints]
workspace = true

[features]
test = ["dep:tokio-stream", "dep:tracing-flame", "dep:tracing-subscriber"]
mock-feedback = []
