[package]
name = "tycho-control"
description = "Node control server."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# TODO: Make all dependencies optional to allow using just a plain proto

[dependencies]
# crates.io deps
anyhow = { workspace = true }
arc-swap = { workspace = true, optional = true }
async-trait = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
everscale-crypto = { workspace = true, optional = true }
everscale-types = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true, optional = true }
scopeguard = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tracing = { workspace = true }

# local deps
tycho-block-util = { workspace = true, optional = true }
tycho-core = { workspace = true, optional = true }
tycho-network = { workspace = true, optional = true }
tycho-util = { workspace = true }

[features]
full = ["client", "server"]
client = []
server = [
    "dep:arc-swap",
    "dep:everscale-crypto",
    "dep:parking_lot",
    "dep:tycho-block-util",
    "dep:tycho-core",
    "dep:tycho-network",
]
