[package]
name = "tycho-core"
description = "Basic functionality of peer."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
castaway = { workspace = true }
everscale-types = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

# local deps
tycho-block-util = { workspace = true }
tycho-network = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

[dev-dependencies]
bytesize = { workspace = true }
everscale-crypto = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }
tycho-storage = { workspace = true, features = ["test"] }
tycho-util = { workspace = true, features = ["test"] }

[features]
test = []

[lints]
workspace = true
